if ENABLE_MAIN
MAIN_APP = zbuild
endif

bin_PROGRAMS=$(MAIN_APP)

MAIN_DEFAULTSRC=signal.c l_error.c memory.c thread.c str.c arg_proc.c arg_opts.c x_f.c gv_off.c base64.c lc_oper.c m_general.c m_lom.c m_string.c i_math.c sort.c exech.c omfp.c lref.c lref_gen.c lref_glob.c zonebuild.c zonebuild_lref.c

zbuild_SOURCES=$(MAIN_DEFAULTSRC)

MAIN_DEFAULTLN=

zbuild_LDADD=$(MAIN_DEFAULTLN)
